--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react-scripts": "^4.0.3",
     "web-vitals": "^2.1.4"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "cross-env PORT=3006 react-scripts start",
     "build": "react-scripts build",
