--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "cross-env PORT=3006 react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
