--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "^3.0.1"
   }
 }
